# Nylium

./: Cargo.toml  README.md
corrode/: Cargo.toml
corrode-adapter/: Cargo.toml
corrode-adapter/src/: config.rs  gpui.rs  lib.rs
corrode-assets/: Cargo.toml  build.rs
corrode-assets/src/: assets.rs  lib.rs
corrode-config-derive/: Cargo.toml
corrode-config-derive/src/: lib.rs
corrode-ui/: Cargo.toml
corrode-ui/src/form/: boolean.rs
corrode/src/: lib.rs  main.rs  window.rs
corrode/src/pages/settings/: mod.rs
nylium/: Cargo.toml
nylium-adapter/: Cargo.toml
nylium-adapter/src/: config.rs  fields.rs  gamerules.rs  lib.rs  player.rs
nylium-assets/: Cargo.toml  build.rs
nylium-assets/src/: assets.rs  lib.rs
nylium-config-derive/: Cargo.toml
nylium-config-derive/src/: lib.rs
nylium-shared/: Cargo.toml
nylium-shared/src/: lib.rs
nylium-shared/src/form/: mod.rs
nylium-shared/src/objects/: player.rs
nylium-ui/: Cargo.toml
nylium-ui/src/form/: number.rs  string.rs
nylium/src/: actions.rs  http_client.rs  lib.rs  logger.rs  main.rs  window.rs
nylium/src/pages/: console.rs  mod.rs  players.rs  settings.rs
nylium/src/ui/: mod.rs  window.rs
nylium/src/ui/form/: boolean.rs  mod.rs  number.rs  string.rs
nylium/src/ui/pages/: console.rs  game_rules.rs  mod.rs  players.rs  settings.rs  statistics.rs
