[workspace]
resolver = "3"
members = [
    "nylium",
    "nylium-adapter",
    "nylium-assets",
]


[workspace.package]
version = "0.0.0"
edition = "2024"


[workspace.dependencies]
async-trait = "^0.1.89"
gpui = { version = "^0.2.2", default-features = false }
gpui-component = "^0.4.0-preview2"
quote = "^1.0.42"
rust-embed = "^8.9.0"
syn = "^2.0.110"
uuid = "^1.18.1"


[profile.release]
lto = true
codegen-units = 1


[profile.bench]
debug = true
