[package]
name = "nylium-assets"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
rust-embed.workspace = true

[build-dependencies]
prettyplease = "0.2.37"

quote.workspace = true
rust-embed.workspace = true
syn.workspace = true
